# cps6

./: .gitignore  Makefile  main.py  pyproject.toml
plotter/: __init__.py  config.py  plot_function.py  plot_latex.py
solver/: Chebyshev.py  Euler.py  __init__.py  __main__.py  print.py
ui/: __main__.py  controller.py  main_window.py
ui/views/: __init__.py  chebyshev_input_view.py  combined_view.py  euler_input_view.py  result_view.py  selector_view.py  start_view.py
