[project]
name = "cps6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pyside6>=6.9.0",
    "pyside6-addons>=6.9.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
